<resources>
    <string name="app_name">MySac</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="recipe">Recipe</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="logo_mysac">Mysac Profile</string>
    <string name="developer1">Novany Sheila Viki</string>
    <string name="developer2">Arya Bagus Farrazan</string>
    <string name="developer3">Juan Damai Nduru</string>
    <string name="developer4">Simon Rizky Valentino Simanjuntak</string>
    <string-array name="category">
        <item>Beef</item>
        <item>Chicken</item>
        <item>Dessert</item>
        <item>Lamb</item>
        <item>Miscellaneous</item>
        <item>Pasta</item>
        <item>Pork</item>
        <item>Seafood</item>
        <item>Side</item>
        <item>Starter</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Breakfast</item>
        <item>Goat</item>
    </string-array>
</resources>
